fixed z-index on navbar so stars stay behind it

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
 
 body {
   // background-color: $off-white;
-  padding-top: 136px;
+  // padding-top: 136px;
   align-items: center;
   $size: 10px;
   $holeSize: 40%;
